2007-11-01  Mathias Hasselmann  <mathias@openismus.com>

	Handle construct-only properties more stricly.

	* libepc/dispatcher.c, libepc/publisher.c: Assert fields are NULL
	instead of releasing their data, when setting construct-only
	properties.

2007-11-01  Mathias Hasselmann  <mathias@openismus.com>

	Implement the consumer.

	* libepc/consumer.c, libepc/consumer.h: Really implement the consumer.
	* tests/test-consumer.c: Use the consumer API.

2007-11-01  Mathias Hasselmann  <mathias@openismus.com>

	Start the consumer by merging the document-server's client test.

	* tests/test-consumer.c: Just copy the document-server's client test.

2007-11-01  Mathias Hasselmann  <mathias@openismus.com>

	Implement EpcDispatcher, an easy to use ZeroConf dispatcher.

	* configure.in, Makefile.am: Separatly checking for
	avahi-ui which is used by tests/test-consumer only.
	* libepc/dispatcher.c, libepc/dispatcher.h: Implement an
	easy to use ZeroConf service dispatcher on top of Avahi.
	* libepc/publisher.c, libepc/publisher.h: Use the new dispatcher.
	* tests/test-publisher.c: Use the new dispatcher.
	Change key-name for the source-code record.

2007-10-31  Mathias Hasselmann  <mathias@openismus.com>

	Initial commit of the Easy Publish and Consume library.
