@@ -1,0 +1,18 @@
+*.stamp
+
+html
+tmpl
+xml
+
+libepc-decl-list.txt
+libepc-decl.txt
+libepc-overrides.txt
+libepc-sections.txt
+libepc-undocumented.txt
+libepc-unused.txt
+libepc.args
+libepc.hierarchy
+libepc.interfaces
+libepc.prerequisites
+libepc.signals
+libepc.types
