@@ -1,0 +1,17 @@
+<?xml version="1.0"?>
+<!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+               "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd">
+<book id="index" xmlns:xi="http://www.w3.org/2003/XInclude">
+  <bookinfo>
+    <title>Easy Publish and Consume Reference Manual</title>
+  </bookinfo>
+
+  <chapter>
+    <title>Easy Publish and Consume</title>
+    <xi:include href="xml/dispatcher.xml"/>
+    <xi:include href="xml/publisher.xml"/>
+    <xi:include href="xml/consumer.xml"/>
+  </chapter>
+
+  <index />
+</book>
